--- a/css/app.css
+++ b/css/app.css
@@ -4076,3 +4076,6 @@ section {
       line-height: 1em; }
       #footer .row p a {
         color: #664d00; }
+a.link {
+  color:#FF8533 !important;
+}
