Styling the form

--- a/css/app.css
+++ b/css/app.css
@@ -3610,34 +3610,157 @@ button, .button {
 section#form h1 {
   margin-top: 25px; }
 
-#mktoForm_3208, #mktoForm_3749 {
-  margin: 0 auto;
+#speaker {
+  color: #FFFFFF;
+  background: #FFFFFF url(../img/white-bg-thatch.png);
+}
+
+.form-container {
+margin-left:auto;
+    margin-right:auto;
+    max-width: 600px;
+    padding: 30px 30px 20px 30px;
+    box-shadow: rgba(187, 187, 187, 1) 0 0px 20px -1px;
+    -webkit-box-shadow: rgba(187, 187, 187, 1) 0 0px 20px -1px;
+    font: 16px;
+    color: #666;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
   min-width: 320px !important;
-  width: 500px !important;
-  background-color: aliceblue;
-  padding: 20px; }
+  width: 600px !important;
+  background-color: #FFFFFF;
+  font-family: "Open Sans";
+  float: none !important;
+}
+
+.form-header {
+  color: white;
+  text-shadow:1px 1px 0px #000000;
+}
+
+.header-container {
+  -webkit-border-radius: 10px 10px 0 0;
+  -moz-border-radius: 10px 10px 0 0;
+  border-radius: 10px 10px 0 0;
+  width: 600px;
+  margin-left: -30px;
+  margin-top: -30px;
+  height: 77px;
+  background-color: #FF8533;
+  padding-top: 13px;
+}
+
+#mktoForm_3208, #mktoForm_3749 {
+  margin-left:auto;
+    margin-right:auto;
+    max-width: 500px;
+    font: 16px;
+    color: #666;
+  min-width: 320px !important;
+  width: 414px !important;
+  background-color: #FFFFFF;
+  font-family: "Open Sans";
+  }
   #mktoForm_3208 .mktoFormRow, #mktoForm_3749 .mktoFormRow {
     margin: 10px; }
-    #mktoForm_3208 .mktoFormRow input, #mktoForm_3208 .mktoFormRow textarea, #mktoForm_3749.mktoFormRow input, #mktoForm_3749.mktoFormRow textarea {
-      border: 0;
-      border-bottom: 2px solid aliceblue; }
+    #mktoForm_3208 .mktoFormRow input, #mktoForm_3208 .mktoFormRow textarea, #mktoForm_3749 .mktoFormRow input, #mktoForm_3749.mktoFormRow textarea {
+    border-bottom: 2px solid #f06819 !important;
+    font-size: 16px; 
+    color: #555 !important;
+    width: 70% !important;
+    padding: 3px 0px 3px 5px !important;
+    margin-top: 8px !important;
+    margin-right: 6px !important;
+    margin-bottom: 8px !important;
+    border: 1px solid #e5e5e5 !important;
+    background: #fbfbfb !important;
+    outline: 0 !important;
+    -webkit-box-shadow: inset 1px 1px 2px rgba(200,200,200,0.2) !important;
+    box-shadow: inset 1px 1px 2px rgba(200,200,200,0.2) !important; }
+      
       #mktoForm_3208 .mktoFormRow input:focus, #mktoForm_3208 .mktoFormRow textarea:focus, #mktoForm_3749 .mktoFormRow input:focus, #mktoForm_3749 .mktoFormRow textarea:focus {
-        border: none;
-        outline: none;
-        border-bottom: 2px solid #00aeef; }
+        border-bottom: 2px solid #f06819;
+        font-size: 16px; 
+    color: #555;
+    width: 70%;
+    padding: 3px 0px 3px 5px;
+    margin-top: 8px;
+    margin-right: 6px;
+    margin-bottom: 8px;
+    border: 1px solid #e5e5e5;
+    background: #fbfbfb;
+    outline: 0;
+    -webkit-box-shadow: inset 1px 1px 2px rgba(200,200,200,0.2);
+    box-shadow: inset 1px 1px 2px rgba(200,200,200,0.2); }
     #mktoForm_3208 .mktoFormRow .mktoLabel, #mktoForm_3749 .mktoFormRow .mktoLabel {
       width: 150px !important;
       padding-top: 10px;
       font-weight: 400;
-      font-size: 16px; }
+      font-size: 16px; 
+      font-family: "Open Sans";
+      }
     #mktoForm_3208 .mktoFormRow input, #mktoForm_3749 .mktoFormRow input {
       padding: 10px;
       width: 200px !important; }
     #mktoForm_3208 .mktoFormRow select, #mktoForm_3749 .mktoFormRow select {
-      width: 200px !important;
-      font-size: 16px; }
+    font-size: 16px;
+    color: #555;
+    width: 200px !important;
+    padding: 3px 0px 3px 5px;
+    margin-top: 2px;
+    margin-right: 6px;
+    margin-bottom: 16px;
+    border: 1px solid #e5e5e5;
+    background: #fbfbfb;
+    outline: 0;
+    -webkit-box-shadow: inset 1px 1px 2px rgba(200,200,200,0.2);
+    box-shadow: inset 1px 1px 2px rgba(200,200,200,0.2); }
     #mktoForm_3208 .mktoFormRow textarea, #mktoForm_3749 .mktoFormRow textarea {
-      width: 200px !important; }
+      width: 200px !important;
+      height:100px;
+    padding: 5px 0px 0px 5px;
+    font-size: 16px;
+    color: #555;
+    margin-top: 2px;
+    margin-right: 6px;
+    margin-bottom: 16px;
+    border: 1px solid #e5e5e5;
+    background: #fbfbfb;
+    outline: 0;
+    -webkit-box-shadow: inset 1px 1px 2px rgba(200,200,200,0.2);
+    box-shadow: inset 1px 1px 2px rgba(200,200,200,0.2); }
+    #mktoForm_3749 .mktoButtonRow button {
+    -moz-box-shadow:inset 0px 1px 0px 0px #fbafe3;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #fbafe3;
+    box-shadow:inset 0px 1px 0px 0px #fbafe3;
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #F6A779), color-stop(1, #FF8533) );
+    background:-moz-linear-gradient( center top, #F6A779 5%, #FF8533 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#F6A779', endColorstr='#FF8533');
+    background-color:#F6A779;
+    border-radius:9px;
+    -webkit-border-radius:9px;
+    -moz-border-border-radius:9px;
+    border:1px solid #FF8533;
+    display:inline-block;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:16px;
+    font-weight:bold;
+    font-style:normal;
+    font-family: "Open Sans";
+    height: 40px;
+    width:160px;
+    text-decoration:none;
+    text-align:center;
+    text-shadow:1px 1px 0px #FF8533;
+}
+    #mktoForm_3749 .mktoButtonRow :hover {
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #FF8533), color-stop(1, #F6A779) );
+    background:-moz-linear-gradient( center top, #FF8533 5%, #F6A779 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF8533', endColorstr='#F6A779');
+    background-color:#FF8533;
+}}
+
 
 @media only screen and (max-width: 480px) {
   #mktoForm_3208, #mktoForm_3749 {
@@ -3857,7 +3980,7 @@ section {
       color: #a2a2a2;
       line-height: 2.5; }
 
-#agenda {
+/*#agenda {
   color: #222222;
   background: #b38600 url(../img/white-bg.png);
   background: #dee3f1 url("../img/white-bg-thatch.png"); }
@@ -3926,7 +4049,7 @@ section {
           margin-top: -1.5em; } }
     #agenda .timings .row:hover {
       background-color: #ffdf80; }
-
+*/
 #location {
   color: white;
   background: #222222 url(../img/white-bg.png);
@@ -4079,3 +4202,6 @@ section {
 a.link {
   color:#FF8533 !important;
 }
+
+  
+      
