--- a/css/app.css
+++ b/css/app.css
@@ -19,6 +19,12 @@ section,
 summary {
   display: block; }
 
+.sub-summary{
+    width: 50%;
+    display: block;
+    margin: 0;
+    float: left;
+  }
 /**
  * Correct `inline-block` display not defined in IE 8/9.
  */
