--- a/css/app.css
+++ b/css/app.css
@@ -3630,7 +3630,7 @@ section#form h1 {
 margin-left:auto;
     margin-right:auto;
     max-width: 600px;
-    padding: 30px 30px 20px 30px;
+    /*padding: 30px 30px 20px 30px;*/
     box-shadow: rgba(187, 187, 187, 1) 0 0px 20px -1px;
     -webkit-box-shadow: rgba(187, 187, 187, 1) 0 0px 20px -1px;
     font: 16px;
@@ -3638,7 +3638,7 @@ margin-left:auto;
     border-radius: 10px;
     -webkit-border-radius: 10px;
   min-width: 320px !important;
-  width: 600px !important;
+  /*width: 600px !important;*/
   background-color: #FFFFFF;
   font-family: "Open Sans";
   float: none !important;
@@ -3653,8 +3653,8 @@ margin-left:auto;
   -webkit-border-radius: 10px 10px 0 0;
   -moz-border-radius: 10px 10px 0 0;
   border-radius: 10px 10px 0 0;
-  width: 600px;
-  margin-left: -30px;
+  width: 100%;
+  /*margin-left: -30px;*/
   margin-top: -30px;
   height: 77px;
   background-color: #FF8533;
@@ -3764,6 +3764,7 @@ margin-left:auto;
     text-decoration:none;
     text-align:center;
     text-shadow:1px 1px 0px #FF8533;
+    margin-bottom: 25px;
 }
     #mktoForm_3749 .mktoButtonRow :hover {
     background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #FF8533), color-stop(1, #F6A779) );
