--- a/css/app.css
+++ b/css/app.css
@@ -3614,7 +3614,7 @@ button, .button {
     opacity: 0; } }
 
 section#form h1 {
-  margin-top: 25px; }
+  /*margin-top: 25px; }*/
 
 #speaker {
   color: #FFFFFF;
@@ -3793,7 +3793,7 @@ section {
   min-height: 100%; }
 
 .feature {
-  padding: 1em 0 2em 0;
+  padding: 0em 0 0em 0;
   position: relative;
   overflow: hidden;
   clear: both; }
