--- a/generator/assets/css/app.sass
+++ b/generator/assets/css/app.sass
@@ -46,6 +46,12 @@ section
 
   &.feature-small {
    min-height: 80%;
+
+    h1 {
+      font-size: 1.75em;
+      margin-bottom: 50px;
+      margin-top: 30px;
+    }
   }
 
   .row
