--- a/css/app.css
+++ b/css/app.css
@@ -4411,3 +4411,17 @@ small {
     font-size: 26px;
   }
 }
+
+.button {
+  background-color: #FF8533;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 300;
+  margin: 4px 2px;
+  cursor: pointer;
+}
