--- a/css/app-2022.css
+++ b/css/app-2022.css
@@ -4186,7 +4186,7 @@ section {
     font-size: 0.8125em; }
 
 #about blockquote a {
-    color: #b38600; }
+    color: #00AEEF; }
 #about blockquote cite {
     margin: 0.25em 0;
     text-align: right; }
@@ -4194,9 +4194,10 @@ section {
 #archive {
     color: #222222;
     background: white url(../img/white-bg.png);
-    background: url("../img/previous.jpeg");
+    background: url("../img/banner-white.png");
     background-position: center;
-    background-size: cover; }
+    background-size: cover;
+    min-height: fit-content}
 #archive h1, #archive h2, #archive h3, #archive .grid a .day, #archive h4, #archive h5, #archive h6, #archive .grid a .month, #archive .subheader, #archive p, #archive blockquote, #archive a, #archive small, #archive .grid a .year {
     color: #222222; }
 #archive code, #archive abbr, #archive acronym {
@@ -4217,7 +4218,7 @@ section {
     -o-transition: background-color 0.3s;
     transition: background-color 0.3s; }
 #archive .grid a:hover {
-    background-color: #b38600; }
+    background-color: #00AEEF; }
 #archive .grid a .month {
     color: white;
     line-height: 1.5em;
