[Rikkashini/Twinkle] Change styles for footer sections of 2022 edition page

--- a/css/app-2022.css
+++ b/css/app-2022.css
@@ -4256,7 +4256,7 @@ section {
 #footer .row p {
     line-height: 1em; }
 #footer .row p a {
-    color: #664d00; }
+    color: #00AEEF; }
 a.link {
     color:#00AEEF !important;
 }
